Figuring out cards interaction on play.html. Need to fix z-index, card height,and change text.

--- a/output.css
+++ b/output.css
@@ -692,18 +692,21 @@ a:active {
   width: 824px;
   height: 450px;
   display: grid;
+  transition: all 300ms ease-out;
   grid-template-columns: repeat(5, 1fr);
   grid-column-gap: 1rem;
+  overflow: hidden;
 }
 .play-container .play-column {
   display: flex;
+  position: absolute;
+  grid-column: span 1;
   flex-direction: column;
-  width: 100%;
-  height: auto;
-  overflow: scroll;
-  row-gap: 1rem;
-  overflow-y: scroll;
+  width: 152px;
+  height: 100%;
+  overflow-y: auto;
   overflow-x: hidden;
+  transition: all 300ms ease-out;
 }
 .play-container .play-column::-webkit-scrollbar {
   width: 1px;
@@ -716,31 +719,44 @@ a:active {
   /* Background */
   background: #000000;
 }
-.play-container .play-column .play-card.expand {
-  left: 0;
-  top: 0;
-  position: absolute;
-  height: 100%;
-  width: 656px;
-  background-color: darkgreen;
-  z-index: 9999;
-  transition: all 300ms ease-out, left 300ms ease-out;
-}
 .play-container .play-column .play-card {
-  left: auto;
-  top: auto;
   padding: 1rem 10px;
   width: 152px;
-  min-height: 150px;
-  height: auto;
+  height: 160px;
   background-color: grey;
-  transition: all 300ms ease-out, left 300ms ease-out;
+  margin-bottom: 1rem;
+  transition: all 300ms ease-out;
+  position: absolute;
+  left: auto;
+  right: auto;
+}
+.play-container .play-column .play-card :last-child {
+  margin-bottom: 0;
 }
 .play-container .play-column .play-card .play-card-text {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  flex-wrap: wrap;
+  transition: all 300ms ease-out;
 }
 .play-container .play-column .play-card .play-card-text .tag {
   color: #E63223;
+}
+.play-container .play-column .play-card.expand {
+  position: absolute;
+  height: 450px;
+  background-color: darkgreen;
+  z-index: 9999;
+  transition: all 300ms ease-out;
+}
+.play-container .play-column .play-card.expand .play-card-text {
+  display: flex;
+  flex-wrap: wrap;
+  transition: all 300ms ease-out;
+}
+.play-container .play-column .play-card.expand .tag {
+  color: green;
 }
 .play-container .play-description {
   display: flex;
@@ -780,6 +796,9 @@ a:active {
 }
 .play-container .play-description button:hover .material-icons-outlined {
   color: #000000;
+}
+.play-container .play-description .play-date {
+  display: block;
 }
 .play-container .play-description .play-description-text {
   align-self: flex-end;
