--- a/style.scss
+++ b/style.scss
@@ -678,17 +678,20 @@ a:active {
   width: 824px;
   height: 450px;
   display: grid;
+  transition: all 300ms ease-out;
   grid-template-columns: repeat(5, 1fr);
   grid-column-gap: 1rem;
+  overflow: hidden;
   .play-column {
     display: flex;
+    position: absolute;
+    grid-column: span 1;
     flex-direction: column;
-    width: 100%;
-    height: auto;
-    overflow: scroll;
-    row-gap: 1rem;
-    overflow-y: scroll;
+    width: 152px;
+    height: 100%;
+    overflow-y: auto;
     overflow-x: hidden;
+    transition: all 300ms ease-out;
     &::-webkit-scrollbar {
       width: 1px; /* Mostly for vertical scrollbars */
     }
@@ -698,30 +701,43 @@ a:active {
     &::-webkit-scrollbar-track { /* Background */
       background: $black;
     }
-    .play-card.expand {
-      left: 0;
-      top: 0;
-      position: absolute;
-      height: 100%;
-      width: calc((152px * 4) + (16px * 3));
-      background-color: darkgreen;
-      z-index: 9999;
-      transition: all 300ms ease-out, left 300ms ease-out;
-    }
     .play-card {
-      left: auto;
-      top: auto;
       padding: 1rem 10px;
       width: 152px;
-      min-height: 150px;
-      height: auto;
+      height: 160px;
       background-color: grey;
-      transition: all 300ms ease-out, left 300ms ease-out;
+      margin-bottom: 1rem;
+      transition: all 300ms ease-out;
+      position: absolute;
+      left: auto;
+      right: auto;
+      :last-child{
+        margin-bottom: 0;
+      } 
       .play-card-text {
-        display: block;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        flex-wrap: wrap;
+        transition: all 300ms ease-out;
         .tag {
           color: $red;
         }
+      }
+    }
+    .play-card.expand {
+      position: absolute;
+      height: 450px;
+      background-color: darkgreen;
+      z-index: 9999;
+      transition: all 300ms ease-out;
+      .play-card-text {
+        display: flex;
+        flex-wrap: wrap;
+        transition: all 300ms ease-out;
+      }
+      .tag {
+        color: green;
       }
     }
   }
@@ -762,6 +778,9 @@ a:active {
           color: $black;
         }
       }
+    }
+    .play-date {
+      display: block;
     }
     .play-description-text {
       align-self: flex-end;
